# Q3_GIAIC_Hackathon_1_Physical_AI_Humanoid_TextBook

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  huggingface_deployment.md  test_auth.py  test_db.py
backend/: .env.example  .gitignore  README.md  init_db.py  main.py  performance_test.py  pyproject.toml  requirements.txt  run.py  run_validation.py  test_embedding_qdrant.py  test_end_to_end.py  users.db
backend/chunker/: text_chunker.py
backend/config/: config.py
backend/crawler/: content_extractor.py  crawler.py  local_content_reader.py  respectful_crawler.py  sitemap_parser.py
backend/data/chunks/: chunk_0000.json  chunk_0001.json  chunk_0002.json  chunk_0003.json  chunk_0004.json  chunk_0005.json  chunk_0006.json  chunk_0007.json  chunk_0008.json  chunk_0009.json  chunk_0010.json  chunk_0011.json  chunk_0012.json  chunk_0013.json  chunk_0014.json  chunk_0015.json  chunk_0016.json  chunk_0017.json  chunk_0018.json  chunk_0019.json  chunk_0020.json  chunk_0021.json  chunk_0022.json  chunk_0023.json  chunk_0024.json  chunk_0025.json  chunk_0026.json  chunk_0027.json  chunk_0028.json  chunk_0029.json  chunk_0030.json  chunk_0031.json  chunk_0032.json  chunk_0033.json  chunk_0034.json  (+10 more)
backend/embedder/: cohere_embedder.py  embedding_cache.py
backend/models/: data_models.py
backend/scripts/: run_pipeline.py
backend/src/: database.py  dependencies.py  main.py  middleware.py
backend/storage/: qdrant_client.py
backend/tests/: test_crawler.py
backend/utils/: error_handling.py  logging_config.py  token_utils.py
backend/validation/: validator.py
(+261 files in other folders)
